overflow bug, deploy setup

--- a/src/components/SupportBanner/SupportBanner.module.scss
+++ b/src/components/SupportBanner/SupportBanner.module.scss
@@ -4,6 +4,7 @@
   margin-top: 40px;
   height: 364px;
   width: 100vw;
+  max-width: 100%;
   padding: 40px 130px;
   background-color: $color-dark-purple-2;
   display: flex;
